change background color to burlywood and Jumbotron background color to cornflowerblue

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="container">
     <div class="jumbotron">
       <div class="text-center">
-        <h1>Talk to the web page</h1>
-        <p>Click a button to say something to the web page. See what it says back!</p>
+        <h1>Make the cat and dog talk</h1>
+        <p>Click a button to make the cat meow or the dog bark. See what they say back to each other!</p>
       </div>
         <div class="float-left">
           <button class="btn btn-primary" id="meow">Say Meow</button>
